--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,10 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{py,pyx}]
+[*.py]
+indent_style = space
+indent_size = 4
+
+[*.c]
 indent_style = space
 indent_size = 4
