--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v1
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.11
       - name: Test code format
         run: |
           pip3 install autopep8
-          autopep8 --diff --exit-code --max-line-length 128 --recursive videocore6
+          autopep8 --diff --exit-code --max-line-length 128 --recursive src
