Fix csd wg_size cfg by introduce local_invocation arg
wg_size is not wg_x * wg_y * wg_z, is local_x * local_y * local_z.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ package = true
 
 [dependency-groups]
 dev = [
+    "matplotlib>=3.10.8",
     "mypy>=1.16.1",
     "pytest>=8.4.1",
     "ruff>=0.12.1",
